--- a/packages/nouns-webapp/src/css/colors.css
+++ b/packages/nouns-webapp/src/css/colors.css
@@ -3,6 +3,7 @@
   --brand-dark-red: #d63c5e;
   --brand-light-green: #6da886;
   --brand-black: #212529;
+  --brand-white: white;
   /* Colors from Figma  */
   --brand-cool-background: #d5d7e0;
   --brand-cool-border: rgb(189, 192, 207);
@@ -26,4 +27,7 @@
   --brand-color-red-translucent: rgba(214, 60, 94, 0.1);
   --brand-color-blue-translucent: rgba(73, 101, 240, 0.1);
   --brand-color-green-translucent: rgba(67, 179, 105, 0.1);
+
+  /* modification */
+  --navbar-color-text: #848484;
 }
