--- a/packages/nouns-webapp/src/components/NavLocaleSwitcher/NavLocalSwitcher.module.css
+++ b/packages/nouns-webapp/src/components/NavLocaleSwitcher/NavLocalSwitcher.module.css
@@ -7,7 +7,7 @@
 }
 
 .dropDownTop {
-  border-radius: 10px 10px 0px 0px;
+  /* border-radius: 10px 10px 0px 0px; */
   padding-top: 0.65rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
@@ -21,7 +21,7 @@
 }
 
 .dropDownBottom {
-  border-radius: 0px 0px 10px 10px;
+  /* border-radius: 0px 0px 10px 10px; */
   padding-bottom: 0.65rem;
   padding-top: 0.5rem;
   padding-left: 1rem;
@@ -48,14 +48,14 @@
   border: none;
   margin: 5px;
   padding: 5px 20px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   background-color: rgba(211, 211, 211, 0.664);
   color: var(--brand-black);
   border: none;
 }
 .languageButton img {
   margin-right: 10px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 .languageButton:hover,
 .languageButton:active,
