--- a/packages/nouns-subgraph/subgraph.yaml.mustache
+++ b/packages/nouns-subgraph/subgraph.yaml.mustache
@@ -5,25 +5,25 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: NounsAuctionHouse
+    name: AlpsAuctionHouse
     network: {{network}}
     source:
-      address: '{{nounsAuctionHouse.address}}'
-      abi: NounsAuctionHouse
-      startBlock: {{nounsAuctionHouse.startBlock}}
+      address: '{{alpsAuctionHouse.address}}'
+      abi: AlpsAuctionHouse
+      startBlock: {{alpsAuctionHouse.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
-      file: ./src/nouns-auction-house.ts
+      file: ./src/alps-auction-house.ts
       entities:
         - Account
         - Auction
         - Bid
-        - Noun
+        - Alp
       abis:
-        - name: NounsAuctionHouse
-          file: ../nouns-contracts/abi/contracts/NounsAuctionHouse.sol/NounsAuctionHouse.json
+        - name: AlpsAuctionHouse
+          file: ../nouns-contracts/abi/contracts/AlpsAuctionHouse.sol/AlpsAuctionHouse.json
       eventHandlers:
         - event: AuctionCreated(indexed uint256,uint256,uint256)
           handler: handleAuctionCreated
@@ -34,29 +34,29 @@ dataSources:
         - event: AuctionSettled(indexed uint256,address,uint256)
           handler: handleAuctionSettled
   - kind: ethereum/contract
-    name: NounsToken
+    name: AlpsToken
     network: {{network}}
     source:
-      address: '{{nounsToken.address}}'
-      abi: NounsToken
-      startBlock: {{nounsToken.startBlock}}
+      address: '{{alpsToken.address}}'
+      abi: AlpsToken
+      startBlock: {{alpsToken.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
-      file: ./src/nouns-erc-721.ts
+      file: ./src/alps-erc-721.ts
       entities:
-        - Noun
+        - Alp
         - Seed
         - Account
         - Delegate
         - Governance
       abis:
-        - name: NounsToken
-          file: ../nouns-contracts/abi/contracts/NounsToken.sol/NounsToken.json
+        - name: AlpsToken
+          file: ../nouns-contracts/abi/contracts/AlpsToken.sol/AlpsToken.json
       eventHandlers:
-        - event: NounCreated(indexed uint256,(uint48,uint48,uint48,uint48,uint48))
-          handler: handleNounCreated
+        - event: AlpCreated(indexed uint256,(uint48,uint48,uint48,uint48,uint48))
+          handler: handleAlpCreated
         - event: DelegateChanged(indexed address,indexed address,indexed address)
           handler: handleDelegateChanged
         - event: DelegateVotesChanged(indexed address,uint256,uint256)
@@ -64,17 +64,17 @@ dataSources:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
   - kind: ethereum/contract
-    name: NounsDAO
+    name: AlpsDAO
     network: {{network}}
     source:
-      address: '{{nounsDAO.address}}'
-      abi: NounsDAO
-      startBlock: {{nounsDAO.startBlock}}
+      address: '{{alpsDAO.address}}'
+      abi: AlpsDAO
+      startBlock: {{alpsDAO.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
-      file: ./src/nouns-dao.ts
+      file: ./src/alps-dao.ts
       entities:
         - Account
         - Delegate
@@ -82,8 +82,8 @@ dataSources:
         - Vote
         - Governance
       abis:
-        - name: NounsDAO
-          file: ../nouns-contracts/abi/contracts/governance/NounsDAOLogicV2.sol/NounsDAOLogicV2.json
+        - name: AlpsDAO
+          file: ../nouns-contracts/abi/contracts/governance/AlpsDAOLogicV2.sol/AlpsDAOLogicV2.json
       eventHandlers:
         - event: ProposalCreatedWithRequirements(uint256,address,address[],uint256[],string[],bytes[],uint256,uint256,uint256,uint256,string)
           handler: handleProposalCreatedWithRequirements
