update style and css

--- a/packages/nouns-webapp/src/components/AlpHoverCard/AlpHoverCard.module.css
+++ b/packages/nouns-webapp/src/components/AlpHoverCard/AlpHoverCard.module.css
@@ -78,3 +78,9 @@
 .currentHolder {
   margin-bottom: 1rem;
 }
+
+@media (max-width: 568px) {
+  .alpInfoWrapper {
+    color: var(--brand-black) !important;
+  }
+}
