--- a/packages/nouns-webapp/src/components/AlpTraitsOverlay/AlpTraitsOverlay.module.css
+++ b/packages/nouns-webapp/src/components/AlpTraitsOverlay/AlpTraitsOverlay.module.css
@@ -1,12 +1,16 @@
 .traitList {
-    list-style: none;
-    margin: 0;
-    padding: 8px;
-  }
-  
-  .traitList li {
-    padding: 4px 0;
-    text-transform: capitalize;
-    font-family: 'Londrina Solid';
-    font-size: 23px;
-  }
+  list-style: none;
+  margin: 0;
+  padding: 8px;
+}
+
+.traitList li {
+  padding: 4px 0;
+  text-transform: capitalize;
+  font-family: 'Londrina Solid';
+  font-size: 23px;
+}
+
+.image {
+  height: 24px;
+}
