--- a/packages/nouns-webapp/src/components/AlperAlpContent/AlperAlpContent.module.css
+++ b/packages/nouns-webapp/src/components/AlperAlpContent/AlperAlpContent.module.css
@@ -18,3 +18,9 @@
 .currentBidCol {
   border-right: 0 !important;
 }
+
+@media (max-width: 568px) {
+  .mobileText {
+    color: var(--brand-black) !important;
+  }
+}
