--- a/packages/nouns-webapp/src/components/AuctionActivityDateHeadline/AuctionActivityDateHeadline.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivityDateHeadline/AuctionActivityDateHeadline.module.css
@@ -10,3 +10,9 @@
   margin-left: 5rem;
   width: auto;
 }
+
+@media (max-width: 568px) {
+  .date {
+    color: var(--brand-black) !important;
+  }
+}
