--- a/packages/nouns-webapp/src/components/BidHistoryBtn/BidHistoryBtn.module.css
+++ b/packages/nouns-webapp/src/components/BidHistoryBtn/BidHistoryBtn.module.css
@@ -36,7 +36,7 @@
 
 .bidHistoryWarm {
   margin-left: 0.5rem;
-  color: var(--brand-color-red);
+  color: var(--brand-white);
   font-family: 'PT Root UI';
   font-weight: bold;
   font-size: 1rem;
@@ -45,7 +45,7 @@
 
 .bidHistoryCool {
   margin-left: 0.5rem;
-  color: var(--brand-color-blue);
+  color: var(--brand-black);
   font-family: 'PT Root UI';
   font-weight: bold;
   font-size: 1rem;
