--- a/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
+++ b/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
@@ -52,3 +52,13 @@
     padding-left: 0.5rem;
   }
 }
+
+@media (max-width: 568px) {
+  .mobileText {
+    color: var(--brand-black) !important;
+  }
+
+  .currentBid {
+    color: var(--brand-black) !important;
+  }
+}
