--- a/packages/nouns-webapp/src/components/Holder/Holder.module.css
+++ b/packages/nouns-webapp/src/components/Holder/Holder.module.css
@@ -81,3 +81,13 @@
     margin-right: 0;
   }
 }
+
+@media (max-width: 568px) {
+  .holderCopy {
+    color: var(--brand-black) !important;
+  }
+
+  .mobileText {
+    color: var(--brand-black) !important;
+  }
+}
