--- a/packages/nouns-webapp/src/components/AlpInfoRowBirthday/AlpInfoRowBirthday.module.css
+++ b/packages/nouns-webapp/src/components/AlpInfoRowBirthday/AlpInfoRowBirthday.module.css
@@ -15,6 +15,19 @@
   margin-right: 7px;
 }
 
+@media (max-width: 992px) {
+  .classes.alpInfoRowBirthday {
+    color: var(--brand-black) !important;
+  }
+  .mobileText {
+    color: var(--brand-black) !important;
+  }
+
+  .birthdayIcon {
+    filter: brightness(0) invert(0) !important;
+  }
+}
+
 @media (max-width: 568px) {
   .classes.alpInfoRowBirthday {
     color: var(--brand-black) !important;
