--- a/packages/nouns-webapp/src/components/AlpInfoRowHolder/AlpInfoRowHolder.module.css
+++ b/packages/nouns-webapp/src/components/AlpInfoRowHolder/AlpInfoRowHolder.module.css
@@ -49,6 +49,12 @@
   margin-right: 7px;
 }
 
+@media (max-width: 992px) {
+  .mobileText {
+    color: var(--brand-black) !important;
+  }
+}
+
 @media (max-width: 568px) {
   .mobileText {
     color: var(--brand-black) !important;
