--- a/packages/nouns-webapp/src/components/AuctionActivityAlpTitle/AuctionActivityAlpTitle.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivityAlpTitle/AuctionActivityAlpTitle.module.css
@@ -12,10 +12,14 @@
   .wrapper h1 {
     font-size: 56px;
   }
+
+  .mobileText {
+    color: var(--brand-black) !important ;
+  }
 }
 
 @media (max-width: 568px) {
   .mobileText {
-    color: var(--brand-black);
+    color: var(--brand-black) !important ;
   }
 }
