--- a/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
+++ b/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
@@ -51,6 +51,14 @@
   .leftCol {
     padding-left: 0.5rem;
   }
+
+  .mobileText {
+    color: var(--brand-black) !important;
+  }
+
+  .currentBid {
+    color: var(--brand-black) !important;
+  }
 }
 
 @media (max-width: 568px) {
