--- a/packages/nouns-webapp/src/components/Holder/Holder.module.css
+++ b/packages/nouns-webapp/src/components/Holder/Holder.module.css
@@ -80,6 +80,14 @@
     margin-left: 0;
     margin-right: 0;
   }
+
+  .holderCopy {
+    color: var(--brand-black) !important;
+  }
+
+  .mobileText {
+    color: var(--brand-black) !important;
+  }
 }
 
 @media (max-width: 568px) {
