--- a/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
+++ b/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
@@ -97,8 +97,9 @@
 
 .whiteInfo,
 .whiteWallet {
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* background-color: white; */
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  border: 1px solid var(--brand-white);
   color: rgb(95, 95, 95);
 }
 
