--- a/packages/nouns-webapp/src/components/Auction/Auction.module.css
+++ b/packages/nouns-webapp/src/components/Auction/Auction.module.css
@@ -10,11 +10,10 @@
 .auctionActivityCol {
   padding-right: 5rem;
   padding-bottom: 0rem;
-  min-height: 520px;
-  align-self: flex-end !important;
+  align-self: center;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   .alpWrapper {
     width: 70%;
     margin-left: 15%;
