--- a/packages/nouns-webapp/src/components/NavBar/NavBar.module.css
+++ b/packages/nouns-webapp/src/components/NavBar/NavBar.module.css
@@ -1,9 +1,7 @@
 .navBarBrand {
   position: relative;
+  align-self: center;
   z-index: 2;
-  /* padding: 0rem 0rem; */
-  /* margin-bottom: 1.5rem; */
-  padding-bottom: 2rem;
   transition: all 0.15s ease-in-out;
 }
 
@@ -12,25 +10,11 @@
 }
 
 .navBarLogo {
-  width: 160px;
-  height: 75px;
+  height: 40px;
 }
 
 .navBarCustom {
-  padding-bottom: 1rem;
-}
-
-@media (max-width: 992px) {
-  .navBarLogo {
-    width: 65px;
-    height: 65px;
-  }
-
-  .navBarCustom {
-    margin-bottom: -1px;
-    margin-right: -5px;
-    padding-bottom: 0rem;
-  }
+  padding: 1.5rem;
 }
 
 /* connect button displays differently to default NavBarItems, thus the !importants */
@@ -80,7 +64,7 @@
 
 .testnetImg {
   width: auto;
-  height: 45px;
+  height: 44px;
 }
 
 .addressNavLink {
@@ -101,6 +85,5 @@
   /* border-radius: 10px; */
   height: 44px;
   padding: 0.25rem 0.5rem;
-  margin-right: 12px;
   border-color: white !important;
 }
